# pdf-to-compendium

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README  README.md  module.json  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  webpack.config.cs
.cicd/: container_build.ps1  docker-compose.prod.yml  docker-compose.yml  emsdk.Dockerfile  typescript.Dockerfile
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: container_build.ps1  docker-compose.prod.yml.bak  docker-compose.yml  emsdk.Dockerfile  gcc13_emsdk.Dockerfile  main.yml  typescript.Dockerfile
image_extractor/: CMakeLists.txt  image_extractor.cpp
pdf-images-to-foundry/: README.md  module.json
pdf-to-compendium/: LICENSE  README.md  index.html  module.js  module.json
pdf-to-compendium/scripts/: entry.js  entry.js.map  main.bundle.js  main.js  main.js.map
pdf-to-compendium/scripts/cli/: cli.js.map
pdf-to-webp/: CMakeLists.txt  CMakePresets.json  artwork_handler.cpp  artwork_handler.h  image_extractor.cpp  image_extractor.h  image_extractor.py  main.cpp  shared_array.cpp  shared_array.h
pdf-to-webp/app/: CMakeLists.txt  main.cpp
pdf-to-webp/components/: CMakeLists.txt
pdf-to-webp/components/artwork_handler/: CMakeLists.txt  artwork_handler.cpp  artwork_handler.h
pdf-to-webp/components/handler/: CMakeLists.txt  handler.h
pdf-to-webp/components/image/: CMakeLists.txt  image.h
pdf-to-webp/components/image_extractor/: CMakeLists.txt  image_extractor.cpp  image_extractor.cpp.bak  image_extractor.h
pdf-to-webp/components/json_handle/: CMakeLists.txt  json_handle.cpp  json_handle.h  test.cpp
pdf-to-webp/components/private/: CMakeLists.txt
pdf-to-webp/components/private/include/: artwork_handler.h  fs_map.h  handler.h  image.h  image_extractor.h  json_ref.h  tsqueue.h
pdf-to-webp/components/private/src/: artwork_handler.cpp  image.cpp  image_extractor.cpp  json_ref.cpp
pdf-to-webp/components/public/: CMakeLists.txt
pdf-to-webp/components/public/include/: entrypoint.h
pdf-to-webp/components/public/src/: entrypoint.cpp
pdf-to-webp/components/shared_array/: CMakeLists.txt  shared_array.cpp  shared_array.h
pdf-to-webp/components/test_doctest/: CMakeLists.txt  test_doctest.cpp  test_doctest.h
pdf-to-webp/components/tsqueue/: CMakeLists.txt  tsqueue.cpp  tsqueue.h
pdftofoundry/templates/: import-window.html
scripts/: image_extractor.py  index.ts  jimp_worker.ts  webp_worker.ts
src/: args.ts  demo.js  index.ts
src/foundry/: foundry.ts
src/mappings/: image_map.ts  json_map.ts  mappings.ts
src/schemas/: schemas.ts
src/schemas/sfrpg/: alien_archive_1.json  alien_archive_2.json  alien_archive_3.json  fly_free_or_die_pawns.json
src/workers/: image_saver.ts  json_extractor.ts  pdf_extractor.ts  workers.ts
starfinder-pdf-to-foundry/lang/: en.json
starfinder-pdf-to-foundry/styles/: style.css
templates/: import-window.html
test/: a.out.js  a.out.wasm  index.html  webp.c  webp.cjs
webpack-app/: index.html  package.json  tsconfig.json  webpack.config.js
webpack-app/src/: entry.ts  main.ts
webpack-app/src/cli/: cli.ts
webpack-app/src/lib/mappings/: image_map.ts  json_map.ts
webpack-app/src/lib/schemas/: pdf_schema.json  schemas.ts
webpack-app/src/lib/schemas/sfrpg/: alien_archive_1.ts  alien_archive_2.ts  alien_archive_3.ts
webpack-app/src/lib/workers/: image_saver.ts  json_extractor.ts  pdf_extractor.ts
