[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "starfinderpdftofoundry"
version = "0.0.1"
authors = [
    { name="Cody LeClair", email="cody.leclair.us@proton.me" },
]
description = "This is a quick and dirty script that lets you take PDFs that contain certain adventures, and export them to a format that is compatible with Foundry Virtual Tabletop for the Starfinder system."
readme = "README"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "deprecation",
    "lxml",
    "packaging",
    "pikepdf",
    "Pillow",
]

[project.urls]
"Homepage" = "https://github.com/prominus/starfinderpdftofoundry"
"Bug Tracker" = "https://github.com/prominus/starfinderpdftofoundry/issues"

[project.scripts]
image_extractor = "image_extractor.module:__main__"

[tool.setuptools.packages.find]
where = ["scripts"]